# polyglotka

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  WARP.md  pyproject.toml
scripts/: excel_to_srt.py
src/polyglotka/: cli.py  common.py  config.py  main.py  utils.py
src/polyglotka/common/: chrome.py  config.py  console.py  exceptions.py  utils.py
src/polyglotka/importer/: words.py  words_cache.py
src/polyglotka/importer/language_reactor/: browser.py  importer.py  items.py  structures.py
src/polyglotka/importer/migaku/: browser.py  importer.py  migaku_exporter.js
src/polyglotka/junk/: plots.py  read_lr_data.py  read_lr_words.py  saved_item_scheme.ts
src/polyglotka/kanji/: main.py
src/polyglotka/lr_importer/: lr_items.py  lr_words.py  saved_item_official_schema.ts  words_cache.py
src/polyglotka/plots/: appearance.py  figure.py  main.py
src/polyglotka/plots/BarChart/: figure.py  main.py
src/polyglotka/plots/Scatter/: appearance.py  figure.py  main.py
src/polyglotka/simple_commands/: excel_to_srt.py  kanji.py  words_exporter.py
tests/: test_config.py  test_main.py
tests/testing_data/: lln_excel_subs_2025-10-14_8772835 04.31.52.xlsx  migaku_words_de.csv  migaku_words_ja.csv
