[tool.poetry]
name = "polyglotka"
version = "0.1"
description = ""
authors = ["Konstantin Kolesnyak <constkolesnyak@gmail.com>"]
readme = "README.md"
packages = [{ include = "polyglotka", from = "src" }]

[tool.poetry.scripts]
polyglotka = 'polyglotka.main:main'
# Reinstall via pipx: pipx uninstall polyglotka; pipx install -e .

[tool.poetry.dependencies]
python = ">=3.11,<4"
path = ">=17.1.1,<18.0.0"
plotly = "^6.3.0"
pytest = "^8.4.2"
pydantic = "^2.11.9"
pydantic-settings = "^2.10.1"
funcy = "^2.0"
fire = "^0.7.1"
dash = "^3.2.0"
waitress = "^3.0.0"
icecream = "^2.1.8"
rich = "^14.1.0"
numpy = "^2.3.3"
pandas = "^2.3.2"
regex = "^2025.9.18"
platformdirs = "^4.4.0"
openpyxl = "^3.1.5"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
# filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 110
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
