[project]
name = "polyglotka"
version = "0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4"
authors = [{ name = "Konstantin Kolesnyak", email = "constkolesnyak@gmail.com" }]
dependencies = [
    "path>=17.1.1,<18.0.0",
    "plotly>=6.3.0,<7",
    "pydantic>=2.11.9,<3",
    "pydantic-settings>=2.10.1,<3",
    "funcy>=2.0,<3",
    "fire>=0.7.1,<1",
    "dash>=3.2.0,<4",
    "waitress>=3.0.0,<4",
    "icecream>=2.1.8,<3",
    "rich>=14.1.0,<15",
    "numpy>=2.3.3,<3",
    "pandas>=2.3.2,<3",
    "regex>=2025.9.18",
    "platformdirs>=4.4.0,<5",
    "openpyxl>=3.1.5,<4",
]

[project.scripts]
polyglotka = "polyglotka.main:main"
# Reinstall via uv: uv tool install --force --editable .

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyglotka"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.black]
line-length = 110
skip-string-normalization = true
